# rust_ESP32-8048S050

./: .gitignore  Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
src/: display_driver.rs  lib.rs  terminal.rs
