[package]
name = "esp328048s050"
version = "0.1.0"
authors = ["Kezi <keziolio123@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = 3
lto = true


[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.51.0", default-features = false }

embedded-graphics-framebuf = "0.5.0"
embedded-graphics-core = "0.4.0"
embedded-graphics = "0.8.1"
esp-idf-hal = "0.45"
embedded-gfx = "0.1.0"


[build-dependencies]
embuild = "0.33"
